--- a/stable/alpine/nginx.conf
+++ b/stable/alpine/nginx.conf
@@ -1,15 +1,14 @@
-
 user  nginx;
 worker_processes  1;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
 
+server_tokens off;
 
 events {
     worker_connections  1024;
 }
-
 
 http {
     include       /etc/nginx/mime.types;
